--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,10 @@ notifications:
 
 sudo: false
 dist: trusty
+
+# Temporary for Python 3.7
+matrix:
+  include:
+    - python: 3.7
+      dist: xenial
+      sudo: true
